--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
           <hr/>
           <h5 class="mb-2">How to add more challenges</h5>
           <ol class="mb-0">
-            <li>Duplicate <code>challenge-1.html</code>, rename (e.g., <code>challenge-3.html</code>).</li>
-            <li>Inside the file, change <code>data-page="challenge-1"</code> to a unique id (e.g., <code>challenge-3</code>).</li>
-            <li>Update the navbar links in all pages if you want it listed.</li>
+            <li>Reach out to Ghostyz!</li>
           </ol>
         </div>
       </div>
