--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="card-body">
               <h5 class="card-title">Operation (NAME)</h5>
               <p class="card-text">Two-team scoreboard, player roster with "Officer's Name", and per-page reset.</p>
-              <a href="challenge-1.html" class="btn btn-primary">Open Challenge 1</a>
+              <a href="challenge-1.html" class="btn btn-primary">Open Operation (NAME)</a>
             </div>
           </div>
         </div>
@@ -45,7 +45,7 @@
             <div class="card-body">
               <h5 class="card-title">Operation (NAME)</h5>
               <p class="card-text">Identical setup on a separate page with its own saved stats.</p>
-              <a href="challenge-2.html" class="btn btn-primary">Open Challenge 2</a>
+              <a href="challenge-2.html" class="btn btn-primary">Open Operation (NAME)</a>
             </div>
           </div>
         </div>
