--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="col-12">
           <hr/>
-          <h5 class="mb-2">How to add more challenges</h5>
+          <h5 class="mb-2">How to add more Operations</h5>
           <ol class="mb-0">
             <li>Reach out to Ghostyz!</li>
           </ol>
