--- a/challenge-1.html
+++ b/challenge-1.html
@@ -38,6 +38,34 @@
           <p class="text-muted mt-2 mb-0 small">Stats save automatically in your browser (per page). Reset only clears this operation.</p>
         </div>
 
+<!-- Timer -->
+        <div class="col-12">
+          <div class="card shadow-sm">
+            <div class="card-body d-flex flex-wrap align-items-center justify-content-between gap-3">
+              <div>
+                <h5 class="card-title mb-1">Timer</h5>
+                <div id="timerDisplay" class="display-6 fw-semibold">00:00:00</div>
+              </div>
+              <div class="d-flex flex-wrap align-items-end gap-2">
+                <div>
+                  <label class="form-label mb-1 small">Hours</label>
+                  <input id="timerHours" type="number" min="0" class="form-control form-control-sm" placeholder="HH">
+                </div>
+                <div>
+                  <label class="form-label mb-1 small">Minutes</label>
+                  <input id="timerMinutes" type="number" min="0" max="59" class="form-control form-control-sm" placeholder="MM">
+                </div>
+                <div>
+                  <label class="form-label mb-1 small">Seconds</label>
+                  <input id="timerSeconds" type="number" min="0" max="59" class="form-control form-control-sm" placeholder="SS">
+                </div>
+                <button id="timerSetBtn" class="btn btn-outline-success">Set</button>
+                <button id="timerStartPauseBtn" class="btn btn-outline-primary">Start</button>
+                <button id="timerResetBtn" class="btn btn-outline-secondary">Reset</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Team Naming -->
         <div class="col-12 col-xl-4">
           <div class="card shadow-sm h-100">
